--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -7,6 +7,19 @@ h1 {
   font-size: 120px;
 }
 
+@media only screen and (max-width: 640px) {
+  h1 {
+    font-size: 75px
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  h1 {
+    font-size: 50px
+  }
+}
+
+
 #category {
   font-family: Staatliches;
   font-weight: 500;
@@ -20,8 +33,7 @@ h1 {
 }
 
 #banner {
-  margin: 20px;
-  height: 800px;
+  height: auto;
 }
 
 #editor {
