--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -7,6 +7,7 @@ h1 {
   font-size: 120px;
 }
 
+    margin-right: 15px
 @media only screen and (max-width: 750px) {
   h1 {
     font-size: 75px
@@ -20,6 +21,11 @@ h1 {
 }
 
 @media only screen and (max-width: 640px) {
+  .uk-navbar-container {
+    margin-left: 0;
+    margin-right: 0
+  }
+}
   .two-col {
     display: none
   }
