--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -7,7 +7,18 @@ h1 {
   font-size: 120px;
 }
 
+.uk-navbar-container {
+  margin-left: 25px;
+  margin-right: 25px
+}
+
+@media only screen and (max-width: 960px) {
+  .uk-navbar-container {
+    margin-left: 15px;
     margin-right: 15px
+  }
+}
+
 @media only screen and (max-width: 750px) {
   h1 {
     font-size: 75px
@@ -26,12 +37,14 @@ h1 {
     margin-right: 0
   }
 }
+
+@media only screen and (max-width: 800px) {
   .two-col {
     display: none
   }
 }
 
-@media only screen and (min-width: 641px) {
+@media only screen and (min-width: 801px) {
   .one-col {
     display: none
   }
